--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <link href="https://fonts.googleapis.com/css?family=Bevan&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <h1>Planets</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Introduction</a></li>
+        <li><a href="#">Terrestrial Planets</a></li>
+        <li><a href="#">Mars</a></li>
+        <li><a href="#">Venus</a></li>
+      </ul>
+    </nav>
+
+
+
+  </header>
 
 </body>
 </html>
