--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
     <nav>
       <ul>
         <li><a href="#">Introduction</a></li>
-        <li><a href="#">Terrestrial Planets</a></li>
+        <li><a href="#">Terrestrial planets</a></li>
         <li><a href="#">Mars</a></li>
         <li><a href="#">Venus</a></li>
       </ul>
     </nav>
-
-
 
   </header>
 
